@@ -67,3 +67,5 @@
 	- also registrar and password reset modules
 	- add to repos
 
+ - security-updates should show plugins that you *could* install
+
